--- a/src/Pacco.Services.Orders.Api/Pacco.Services.Orders.Api.csproj
+++ b/src/Pacco.Services.Orders.Api/Pacco.Services.Orders.Api.csproj
@@ -1,21 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+   	<TargetFramework>net7.0</TargetFramework>
     <LangVersion>latest</LangVersion>
     <RootNamespace>Pacco.Services.Orders.Api</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Convey" Version="0.4.*" />
-    <PackageReference Include="Convey.Logging" Version="0.4.*" />
-    <PackageReference Include="Convey.WebApi" Version="0.4.*" />
-    <PackageReference Include="Convey.WebApi.CQRS" Version="0.4.*" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Pacco.Services.Orders.Infrastructure\Pacco.Services.Orders.Infrastructure.csproj" />
   </ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Convey.Secrets.Vault" Version="1.1.448" />
+	</ItemGroup>
+
 
   <ItemGroup>
     <Content Include="certs\**" CopyToPublishDirectory="Always" />
